--- a/iql-web/src/main/resources/templates/iql/iql.html
+++ b/iql-web/src/main/resources/templates/iql/iql.html
@@ -544,7 +544,7 @@ $(function(){
         dest_posi_X = e.pageX;
         move_X = src_posi_X - dest_posi_X;
         src_posi_X = dest_posi_X;
-        console.log(dest_posi_X + ' -- ' + $(window).width());
+        // console.log(dest_posi_X + ' -- ' + $(window).width());
         destWidth = dest_posi_X > 200 ? dest_posi_X : 200;
         destWidth = destWidth < 400 ? destWidth : 400;
         if(is_mouse_down){
